css/site.css
h1, h2, h3, h4, h5, h6, nav a, .links small a, .links small {
  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.links small {
  font-size: 60%;
}

.category {
  font-size: 80%;
}

dl {
  border: 2px double antiquewhite;
  padding: 2rem;
  margin: 4rem 0 1rem;
  background-color: ghostwhite;
}
dt {
  float: left;
  clear: left;
  width: 100px;
  text-align: right;
  font-weight: bold;
}
dt:after {
  content: ":";
}
dd {
  margin: 0 0 0 110px;
  padding: 0 0 0.5em 0;
}

h1, .space {
  margin-top: 4rem
}

body .post {
  fontsize: 2em;
}

.post a, .docs-section a, .links small a, .related a {
  color: #0e1e3b;
  text-decoration: none;
  border-bottom: 1px #1eaedb dotted;
}

a.anchorjs-link {
  text-decoration: none;
  border-bottom: none;
}

.post a:hover, .docs-section a:hover, .links small a:hover, .related a:hover {
  color: #1b9cc5;
  text-decoration: none;
  border-bottom: 1px #1b9cc5 solid;
}

p img {
  max-width: 100%;
  box-sizing: border-box;
}

.anchorjs-link {
  transition: all .25s linear;
}
*:hover > .anchorjs-link {
  margin-left: -1.125em !important;
}

.navbar-toggler {
  padding: .5rem .75rem;
  font-size: 1.60rem;
  width:100%;
}

.dropdown-menu {
  font-size: 1.4rem;
  top:67px;
  left:-22px;
  border-top: none;
}
.nav {
  margin-bottom: -8px;
}

.nav-item {
  position: relative;
  float: left;
  margin-bottom: 0; }
.nav-link {
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  letter-spacing: .2rem;
  margin-right: 35px;
  text-decoration: none;
  line-height: 6.5rem;
  color: #222; }
.nav-link.active {
  color: #33C3F0; }

/* Shared
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.button.button-primary {
  border-radius: 100px;
  background-color:#656565;
  border-color:#656565;
}
/* Sections
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.section {
  padding: 8rem 0 7rem;
  text-align: center;
}
.section-heading,
.section-description {
  margin-bottom: 1.2rem;
}
.links {
  margin-top:1rem;}
/* Help
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.get-help {
  border-bottom: 1px solid #ddd;
}

blockquote {
    margin: 0 0 20px;
    padding: 9px 20px 0 19px;
    border-left: 1px solid #ddd;
}

blockquote p {
    font-size: 17px;
    line-height: 24px;
    color: #777;
    font-style: italic;
}
/* Categories
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.categories {
  background-color: #656565;
  background-size: cover;
  color: #fff;
}
.categories .section-description {
  margin-bottom: 4rem;
}
/* Bigger than 550 */
@media (min-width: 550px) {
  .section {
    padding: 12rem 0 11rem;
  }
  .hero {
    padding-bottom: 12rem;
    text-align: left;
    height: 165px;
  }
}

/* Bigger than 750 */
@media (min-width: 750px) {
  .section {
    padding: 10rem 0 9rem;
  }
  .section-description {
    max-width: 60%;
    margin-left: auto;
    margin-right: auto;
  }
  .categories {
    padding: 10rem 0 9rem;
  }
}

/* Bigger than 1000 */
@media (min-width: 1000px) {
  .section {
    padding: 10rem 0 9rem;
  }
}
/* Default Skeleton CSS
––––––––––––––––––––––––––––––––––––––––––––––––––*/
.container {
  max-width: 800px; }
.header {
  margin-top: 6rem;
  margin-bottom: 4rem;
  text-align: center; }
.value-prop {
  margin-top: 1rem; }
.value-props {
  margin-top: 4rem;
  margin-bottom: 4rem; }
.docs-header {
  text-transform: uppercase;
  font-size: 1.4rem;
  letter-spacing: .2rem;
  font-weight: 600; }
.value-img {
  display: block;
  text-align: center;
  margin: 2.5rem auto 0; }
.example-grid .column,
.example-grid .columns {
  background: #EEE;
  text-align: center;
  border-radius: 4px;
  font-size: 1rem;
  text-transform: uppercase;
  height: 30px;
  line-height: 30px;
  margin-bottom: .75rem;
  font-weight: 600;
  letter-spacing: .1rem; }
.docs-example .row,
.docs-example.row,
.docs-example form {
  margin-bottom: 0; }
.docs-example h1,
.docs-example h2,
.docs-example h3,
.docs-example h4,
.docs-example h5,
.docs-example h6 {
  margin-bottom: 1rem; }
.heading-font-size {
  font-size: 1.2rem;
  color: #999;
  letter-spacing: normal; }
.code-example {
  margin-top: 1.5rem;
  margin-bottom: 0; }
.code-example-body {
  white-space: pre;
  word-wrap: break-word }
.example {
  position: relative;
  margin-top: 4rem; }
.example-header {
  font-weight: 600;
  margin-top: 1.5rem;
  margin-bottom: .5rem; }
.example-description {
  margin-bottom: 1.5rem; }
.example-screenshot-wrapper {
  display: block;
  position: relative;
  overflow: hidden;
  border-radius: 6px;
  border: 1px solid #eee;
  height: 250px; }
.example-screenshot {
  width: 100%;
  height: auto; }
.example-screenshot.coming-soon {
  width: auto;
  position: absolute;
  background: #eee;
  top: 5px;
  right: 5px;
  bottom: 5px;
  left: 5px; }

/* Larger than phone */
@media (min-width: 550px) {
  .header {
    margin-top: 9rem;
    margin-bottom: 5rem; }
  .value-props {
    margin-top: 9rem;
    margin-bottom: 7rem; }
  .value-img {
    margin-bottom: 1rem; }
  .example-grid .column,
  .example-grid .columns {
    margin-bottom: 1.5rem; }
  .example-send-yourself-copy {
    float: right;
    margin-top: 12px; }
  .example-screenshot-wrapper {
    position: absolute;
    width: 48%;
    height: 100%;
    left: 0;
    max-height: none; }
}

/* Larger than tablet */
@media (min-width: 750px) {
  /* Navbar */
  .navbar + .docs-section {
    border-top-width: 0; }
  .navbar,
  .navbar-spacer {
    display: block;
    width: 100%;
    height: 6.5rem;
    background: #fff;
    z-index: 99;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee; }
  .navbar-spacer {
    display: none; }
  .navbar > .container {
    width: 100%; }
  .navbar-list {
    list-style: none;
    margin-bottom: 0; }
  .navbar-item {
    position: relative;
    float: left;
    margin-bottom: 0; }
  .navbar-link {
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .2rem;
    margin-right: 35px;
    text-decoration: none;
    line-height: 6.5rem;
    color: #222; }
  .navbar-link.active {
    color: #33C3F0; }
  .has-docked-nav .navbar {
    position: fixed;
    top: 0;
    left: 2; }
  .has-docked-nav .navbar-spacer {
    display: block; }
  /* Re-overiding the width 100% declaration to match size of % based container */
  .has-docked-nav .navbar > .container {
    width: 80%; }

  /* Popover */
  .popover.open {
    display: block;
  }
  .popover {
    display: none;
    position: absolute;
    background: #fff;
    border: 1px solid #eee;
    border-radius: 4px;
    -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
       -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
            filter: drop-shadow(0 0 6px rgba(0,0,0,.1)); }
  .popover-item:first-child .popover-link:after,
  .popover-item:first-child .popover-link:before {
    bottom: 100%;
    left: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none; }
  .popover-item:first-child .popover-link:after {
    border-color: rgba(255, 255, 255, 0);
    border-bottom-color: #fff;
    border-width: 10px;
    margin-left: -10px; }
  .popover-item:first-child .popover-link:before {
    border-color: rgba(238, 238, 238, 0);
    border-bottom-color: #eee;
    border-width: 11px;
    margin-left: -11px; }
  .popover-list {
    padding: 0;
    margin: 0;
    list-style: none; }
  .popover-item {
    padding: 0;
    margin: 0; }
  .popover-link {
    position: relative;
    color: #222;
    display: block;
    padding: 8px 20px;
    border-bottom: 1px solid #eee;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 1.0rem;
    font-weight: 600;
    text-align: center;
    letter-spacing: .1rem; }
  .popover-item:first-child .popover-link {
    border-radius: 4px 4px 0 0; }
  .popover-item:last-child .popover-link {
    border-radius: 0 0 4px 4px;
    border-bottom-width: 0; }
  .popover-link:hover {
    color: #fff;
    background: #33C3F0; }
  .popover-link:hover,
  .popover-item:first-child .popover-link:hover:after {
    border-bottom-color: #33C3F0; }
}

